--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,11 +1,13 @@
 .hero {
   background-color: $veryLightGray;
+
   .container {
     @include breakpoint-up(large) {
       display: flex;
       align-items: center;
     }
   }
+
   &__image {
     position: relative;
     background-image: url("/images/bg-intro-mobile.svg");
@@ -24,23 +26,22 @@
       order: 2;
       height: 41rem;
       background-image: none;
-      //   background-image: url("/images/bg-intro-desktop.svg");
-      //   background-position: left center;
     }
+
     &::before {
       @include breakpoint-up(large) {
         content: "";
         position: absolute;
-        width: 150%;
         height: 100%;
         background-image: url("/images/bg-intro-desktop.svg");
-        background-size: 93%;
         background-repeat: no-repeat;
         background-position: center bottom;
+        width: 150%;
         background-size: 122%;
         background-position: 0% 83%;
       }
     }
+
     &::after {
       content: "";
       position: absolute;
@@ -60,11 +61,12 @@
         height: 122%;
         background-size: 94%;
         background-position: center 150%;
-        left: 22%;
-        top: -14%;
+        left: 28%;
+        top: -9%;
       }
     }
   }
+
   &__text {
     text-align: center;
 
